# DemonEngine

./: .gitignore  .gitmodules  .projectile  CMakeLists.txt  README.md  copyRes.bat  imgui.ini  imguifix.sh
include/glad/: glad.h
res/shaders/: FragmentQuad2D.glsl  QuadFragment.glsl  VertexCircle2D.glsl  VertexQuad.glsl  VertexQuad2D.glsl  file copy.glsl  fragment2.glsl  fragmentLight.glsl  fragmentMulti.glsl  fragmentQuad.glsl  vertex.txt
src/: Camera.cpp  Camera2d.cpp  Camera2dController.cpp  CoreFun.cpp  Cube.cpp  Demo.cpp  Light.cpp  Mesh.cpp  Shader.cpp  Timer.cpp  app.cpp  glObjects.cpp  main.cpp  renderer.cpp  test.cpp  testClearColor.cpp
src/Editor/: EditorApp.cpp  EditorApp.h  ImGuiEditorLayer.cpp  ImGuiEditorLayer.h  ViewPortLayer.cpp  ViewPortLayer.h
src/core/: Application.cpp  CoreFun.cpp  ImGuiLayer.cpp  Layer.cpp  Log.cpp  Random.cpp  Window.cpp
src/core/profiling/: Timer.cpp
src/graphics/: Shader.cpp  glObjects.cpp
src/include/: Camera.h  Camera2d.h  CoreFun.h  Cube.h  Demo.h  EntryPoint.h  Light.h  Mesh.h  Shader.h  Timer.h  core.h  glObjects.h  renderer.h  test.h  testClearColor.h
src/include/Renderer/: Camera.h  Camera2d.h  Camera2dController.h  Colors.h  FrameBuffer.h  ParticleSystem.h  Shader.h  glObjects.h  imgui_de.h  renderer.h
src/include/core/: Application.h  CoreFun.h  EntryPoint.h  ImGuiLayer.h  Input.h  Layer.h  Log.h  Math.h  Random.h  Window.h  core.h
src/include/core/Events/: ApplicationEvents.h  Events.h  KeyCodes.h  KeyEvents.h  MouseEvents.h
src/include/core/profiling/: Timer.h
src/include/graphic/: Shader.h  glObjects.h
src/include/imgui/glad/: imgui_impl_opengl3.h
src/include/meshes/: Cube.h  Light.h  Mesh.h  quad.h
src/meshes/: Cube.cpp  Light.cpp  quad.cpp
src/renderer/: Camera.cpp  Camera2d.cpp  Camera2dController.cpp  FrameBuffer.cpp  ParticleSystem.cpp  Shader.cpp  glObjects.cpp  renderer.cpp
src/test/: TestBatch.cpp  TestBatch.h  TestCube.cpp  TestCube.h  TestDirLight.cpp  TestDirLight.h  TestDouble.cpp  TestDouble.h  TestLight.cpp  TestLight.h  TestModel.cpp  TestModel.h  TestMultiLight.cpp  TestMultiLight.h  TestPointLight.cpp  TestPointLight.h  TestQuad.cpp  TestRenderBatch.cpp  TestSpawnQuad.cpp  TestTexture.cpp  TestVector.cpp  TestVector.h
src/test/include/: TestBatch.h  TestCube.h  TestDirLight.h  TestDouble.h  TestLight.h  TestModel.h  TestMultiLight.h  TestPointLight.h  TestQuad.h  TestRenderBatch.h  TestSpawnQuad.h  TestTexture.h  TestVector.h
